Fix dashboard display on mobile.

--- a/ui/app/styles/app.scss
+++ b/ui/app/styles/app.scss
@@ -165,6 +165,8 @@ label {
     }
 
     @media #{$mobile} {
+      display: block;
+
       &:not(:nth-child(1)) {
         border-top: none;
       }
